WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83796
[BlackBerry] Web Inspector messages incorrectly converted
https://bugs.webkit.org/show_bug.cgi?id=83796
Summary
[BlackBerry] Web Inspector messages incorrectly converted
Konrad Piascik
Reported
2012-04-12 11:12:08 PDT
[BlackBerry] Web Inspector messages incorrectly converted
Attachments
Patch
(1.36 KB, patch)
2012-04-12 11:13 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Patch
(1.61 KB, patch)
2012-04-12 11:22 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Konrad Piascik
Comment 1
2012-04-12 11:13:06 PDT
Created
attachment 136936
[details]
Patch
Mike Lattanzio
Comment 2
2012-04-12 11:18:11 PDT
That's the fix.
Rob Buis
Comment 3
2012-04-12 11:21:24 PDT
Comment on
attachment 136936
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136936&action=review
> Source/WebKit/blackberry/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
Needs more explanation :)
Konrad Piascik
Comment 4
2012-04-12 11:22:28 PDT
Created
attachment 136938
[details]
Patch
Rob Buis
Comment 5
2012-04-12 11:23:54 PDT
Comment on
attachment 136938
[details]
Patch LGTM.
WebKit Review Bot
Comment 6
2012-04-12 12:03:54 PDT
Comment on
attachment 136938
[details]
Patch Clearing flags on attachment: 136938 Committed
r114011
: <
http://trac.webkit.org/changeset/114011
>
WebKit Review Bot
Comment 7
2012-04-12 12:03:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug