[BlackBerry] Web Inspector messages incorrectly converted https://bugs.webkit.org/show_bug.cgi?id=83796

Patch by Konrad Piascik <kpiascik@rim.com> on 2012-04-12
Reviewed by Rob Buis.

The JSON sent over from the remote Web Inspector front-end was being
mis interpreted as ISO-8859-1.  This caused all non ascii characters to
become garbled when using the String constructor, so we use fromtUTF8 instead.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::dispatchInspectorMessage):

Canonical link: https://commits.webkit.org/101306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114011 268f45cc-cd09-0410-ab3c-d52691b4dbfc